--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </header>
     <!-- /.header -->
     <main>
-        <section class="hero">
+        <section class="section hero">
             <div class="container">
                 <div class="hero__content">
                     <h1 class="title hero__title">Курс алготрейдинга</h1>
@@ -45,18 +45,110 @@
                     <p class="hero__desc">Всего за месяц прямо на сессиях создайте своего эффективного торгового робота с нуля!</p>
                     <div class="hero__call">
                         <div class="call__button">
-                            <a href="#" class="button hero__button button--primary">Начать обучение</a>
-                            <a href="#" class="button hero__button button--secondary">узнать подробнее</a>
+                            <button class="button hero__button button--primary">Начать обучение</button>
+                            <button class="button hero__button button--secondary">узнать подробнее</button>
                         </div>
-                        <p class="call__text">Ваш собственный прибыльный торговый робот за <span class="call__text--strong"></span></p>
+                        <p class="call__text">Ваш собственный <br> прибыльный торговый робот <br>за <span class="call__text--strong">30 дней!</span></p>
                     </div>
                     <!-- /.hero__call -->
                 </div>
                 <!-- /.hero__content -->
+                <h4 class="title hero-subcontent__title">Почему робот?</h4>
+                <div class="hero-subcontent">
+                    <div class="cards hero-subcontent__advantages">
+                        <div class="row">
+                            <div class="card">
+                                <h5 class="card-title">95 <span class="percent--strong">%</span></h5>
+                                <p class="card-subtitle">Увеличение прибыли на финансовых рынках</p>
+                                <p class="card-text">Отсутствие эмоций у робота позволяет в разы увеличить эффективность</p>
+                                </div>
+                            <!-- /.card -->
+                            <div class="card">
+                                <img src="./img/advantage-1.png" alt="Преимущество" class="card-img">
+                                <p class="card-subtitle card-subtitle--lighterW"><strong>Глубокий</strong>  анализ <br>
+                                    и скорость</p>
+                                <p class="card-text">Полноценный анализ финансовых инструментов по разработанным математическим алгоритмам за доли секунд</p>
+                                </div>
+                            <!-- /.card -->
+                            <div class="card">
+                                <img src="./img/advantage-2.png" alt="Преимущество" class="card-img card-img--last">
+                                <p class="card-subtitle card-subtitle--lighterW"><strong>Максимальный</strong>
+                                    инструментарий</p>
+                                <p class="card-text">Отслеживайте тысячи финансовых инструментов каждую секунду с минимальными рисками</p>
+                                </div>
+                            <!-- /.card -->
+                        </div>
+                        <!-- /.row -->
+                    </div>
+                    <!-- /.hero-subcontent__advantages -->
+                </div>
+                <!-- /.her__subcontent -->
             </div>
             <!-- /.container -->
         </section>
         <!-- /.hero -->
+        <section class="section creation">
+            <div class="container">
+                <div class="section-title">
+                    <h2 class="section-title__heading">Создайте своего <br> авторского торгового робота</h2>
+                    <p class="section-title__subtitle">получайте прибыль даже с нулевыми знаниями в сфере алгоритмической торговли</p>
+                </div>
+                <!-- /.section-title -->
+                <div class="row">
+                    <div class="col">
+                        <div class="creation-text">
+                            <h3 class="creation-title"><strong>Сколько бы Вы
+                            заработали</strong>, используя
+                            торгового робота</h3>
+                            <p class="creation-text">Просто введите данные
+                            и сравните результаты </p>
+                        </div>
+                        <!-- /.creation-text -->
+                    </div>
+                    <!-- /.col -->
+                    <div class="col">
+                        <div class="creation-data">
+                            <input type="number" class="creation-data__input">
+                            <label class="creation-data__text">Количество инструментов, по которым Вы торгуете</label>
+                        </div>
+                        <!-- /.creation-data -->
+                        <div class="creation-data">
+                            <input type="number" class="creation-data__input">
+                            <label class="creation-data__text">Количество инструментов Вашего брокера</label>
+                        </div>
+                        <!-- /.creation-data -->
+                    </div>
+                    <!-- /.col -->
+                    <div class="col">
+                        <div class="creation-data">
+                            <input type="number" class="creation-data__input">
+                            <label class="creation-data__text">Средняя месячная прибыль (%)</label>
+                        </div>
+                        <!-- /.creation-data -->
+                        <div class="creation-data">
+                            <input type="number" class="creation-data__input">
+                            <label class="creation-data__text">Сумма депозита ($)</label>
+                        </div>
+                        <!-- /.creation-data -->
+                    </div>
+                    <!-- /.col -->
+                </div>
+                <!-- /.row -->
+                <div class="creation-button">
+                    <button class="button creation__button button--primary">Просчитать прибыль на 2016 год</button>
+                </div>
+                <!-- /.cration-button -->
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.section creation -->
+        <section class="section creation-learning">
+            <h3 class="creation-learning__heading">Обучитесь алгоритмической торговле и уже <span class="days--strong">через 30 дней</span> создайте <br> своего эффективного торгового робота!</h3>
+            <div class="creation-button">
+                <button class="button creation-learning__button button--white">Начать обучение</button>
+            </div>
+        </section>
+        <!-- /.creation-learning -->
     </main>
 </body>
 </html>
