feat: add swiper-section(wip)

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
     <title>AlgoTrading</title>
 </head>
 <body>
@@ -143,12 +144,61 @@
         </section>
         <!-- /.section creation -->
         <section class="section creation-learning">
-            <h3 class="creation-learning__heading">Обучитесь алгоритмической торговле и уже <span class="days--strong">через 30 дней</span> создайте <br> своего эффективного торгового робота!</h3>
+            <h3 class="section-heading creation-learning__heading">Обучитесь алгоритмической торговле и уже <span class="days--strong">через 30 дней</span> создайте <br> своего эффективного торгового робота!</h3>
             <div class="creation-button">
                 <button class="button creation-learning__button button--white">Начать обучение</button>
             </div>
         </section>
         <!-- /.creation-learning -->
+        <section class="section benefits">
+            <div class="container">
+                <h2 class="section-title__heading"><strong>Какие выгоды </strong> я получу<br> от создания своего робота?</h3>
+                <div class="benefits-swiper">
+                    <!-- Slider main container -->
+                    <div class="swiper">
+                        <!-- Additional required wrapper -->
+                        <div class="swiper-wrapper">
+                        <!-- Slides -->
+                        <div class="swiper-slide">
+                            <div class="swiper-slide__content">
+                                <img src="./img/stonks.png" alt="прибыль" class="swiper-slide__img">
+                                <h3 class="swiper-slide__text">Прибыль</h3>
+                                <p class="swiper-slide__desc">Используйте <br> своего робота <br> и получайте прибыль</p>
+                            </div>
+                            <!-- /.swiper-slide__content -->
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper-slide__content">
+                                <img src="./img/stonks.png" alt="прибыль" class="swiper-slide__img">
+                                <h3 class="swiper-slide__text">Прибыль</h3>
+                                <p class="swiper-slide__desc">Используйте <br> своего робота <br> и получайте прибыль</p>
+                            </div>
+                            <!-- /.swiper-slide__content -->
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper-slide__content">
+                                <img src="./img/stonks.png" alt="прибыль" class="swiper-slide__img">
+                                <h3 class="swiper-slide__text">Прибыль</h3>
+                                <p class="swiper-slide__desc">Используйте <br> своего робота <br> и получайте прибыль</p>
+                            </div>
+                            <!-- /.swiper-slide__content -->
+                        </div>
+
+                        </div>
+                    
+                        <!-- If we need navigation buttons -->
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-button-next"></div>
+                  </div>
+                </div>
+                <!-- /.benefits-swiper -->
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.section benefits -->
     </main>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
