--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <!-- /.creation-learning -->
         <section class="section benefits">
             <div class="container">
-                <h2 class="section-title__heading"><strong>Какие выгоды </strong> я получу<br> от создания своего робота?</h3>
+                <h2 class="section-title__heading"><strong>Какие выгоды </strong> я получу<br> от создания своего робота?</h2>
                 <div class="benefits-swiper">
                     <!-- Slider main container -->
                     <div class="swiper">
@@ -183,12 +183,14 @@
                             </div>
                             <!-- /.swiper-slide__content -->
                         </div>
-
                         </div>
-                    
                         <!-- If we need navigation buttons -->
-                        <div class="swiper-button-prev"></div>
-                        <div class="swiper-button-next"></div>
+                        <div class="swiper-button-prev">
+                            <span class="swiper-button__text swiper-button-prev__text">Комиссия</span>
+                        </div>
+                        <div class="swiper-button-next">
+                            <span class="swiper-button__text swiper-button-next__text">Вознаграждение</span>
+                        </div>
                   </div>
                 </div>
                 <!-- /.benefits-swiper -->
@@ -196,6 +198,35 @@
             <!-- /.container -->
         </section>
         <!-- /.section benefits -->
+        <section class="section steps">
+            <div class="container">
+                <div class="section-title">
+                    <h2 class="section-title__heading"><strong>Всё</strong> очень просто</h2>
+                    <p class="section-title__subtitle">Никаких лишних движений во время обучения. Мы с Вами будем чётко следовать по разработанной нами карте обучения.</p>
+                </div>
+                <!-- /.section-title -->
+                <ul class="stpes-list">
+                    <li class="steps-list__item">Создание робота</li>
+                    <li class="steps-list__item">Внедрение</li>
+                    <li class="steps-list__item">Оптимизация</li>
+                    <li class="steps-list__item">Запуск</li>
+                    <li class="steps-list__item">Прибыль</li>
+                </ul>
+                <!-- /.stpes-list -->
+                <div class="steps__video video">
+                    <img src="./img/play.png" alt="Пуск видео" class="video__play">
+                </div>
+                <!-- /.steps__video video -->
+                <div class="steps-example">
+                    <h3 class="steps-example__title">Реальный пример работы алгоритма</h3>
+                    <p class="steps-example__subtitle">Меня с детства интересовал анализ процессов, которые происходят в мире финансов. Именно этот интерес меня подтолкнул получить высшее образование в сфере экономико-математического моделирования</p>
+                    <button class="button button--primary steps-example__button">Приступить к созданию своего доходного робота</button>
+                </div>
+                <!-- /.steps-exmaple -->
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.section steps -->
     </main>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
