--- a/index.html
+++ b/index.html
@@ -227,6 +227,47 @@
             <!-- /.container -->
         </section>
         <!-- /.section steps -->
+        <section class="section format">
+            <div class="container">
+                <div class="section-title">
+                    <h2 class="section-title__heading">Формат обучения</h2>
+                </div>
+                <!-- /.section-title -->
+                <div class="row">
+                    <div class="col-50">
+                        <div class="format-card format-card__test">
+                            <h3 class="format-card__title">Тестирование алгоритмов</h3>
+                            <p class="format-card__text">Форвардное и стрессовое тестирование торговых роботов на практике</p>
+                        </div>
+                        <!-- /.format-card -->
+                    </div>
+                    <!-- /.col-50 -->
+                    <div class="col-50">
+                        <div class="format-card format-card__help">
+                            <h3 class="format-card__title">Помощь преподавателей</h3>
+                            <p class="format-card__text">Ученик всегда может обратиться к наставнику с вопросом и получить точный, своевременный ответ</p>
+                        </div>
+                        <!-- /.format-card -->
+                    </div>
+                    <!-- /.col-50 -->
+                </div>
+                <!-- /.row -->
+                <div class="row">
+                    <div class="cards">
+                        <div class="card">
+                            <img src="./img/casset.png" alt="Кассета" class="card__img">
+                            <h3 class="card__title">Видеолекции</h3>
+                            <p class="card__text">Смотрите лекции on-line от лучших преподавателей алготрейдинга</p>
+                        </div>
+                        <!-- /.card -->
+                    </div>
+                    <!-- /.cards -->
+                </div>
+                <!-- /.row -->
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.section format -->
     </main>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
