feat: add formats section

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     <h2 class="section-title__heading">Формат обучения</h2>
                 </div>
                 <!-- /.section-title -->
-                <div class="row">
+                <div class="row cards">
                     <div class="col-50">
                         <div class="format-card format-card__test">
                             <h3 class="format-card__title">Тестирование алгоритмов</h3>
@@ -242,26 +242,41 @@
                         <!-- /.format-card -->
                     </div>
                     <!-- /.col-50 -->
-                    <div class="col-50">
+                    <div class="col">
                         <div class="format-card format-card__help">
                             <h3 class="format-card__title">Помощь преподавателей</h3>
                             <p class="format-card__text">Ученик всегда может обратиться к наставнику с вопросом и получить точный, своевременный ответ</p>
                         </div>
                         <!-- /.format-card -->
                     </div>
-                    <!-- /.col-50 -->
+                    <!-- /.col -->
                 </div>
                 <!-- /.row -->
                 <div class="row">
-                    <div class="cards">
-                        <div class="card">
-                            <img src="./img/casset.png" alt="Кассета" class="card__img">
-                            <h3 class="card__title">Видеолекции</h3>
-                            <p class="card__text">Смотрите лекции on-line от лучших преподавателей алготрейдинга</p>
-                        </div>
-                        <!-- /.card -->
+                    <div class="card">
+                        <img src="./img/casset.png" alt="Кассета" class="card__img">
+                        <h3 class="card__title">Видеолекции</h3>
+                        <p class="card__text">Смотрите лекции on-line <br> от лучших преподавателей алготрейдинга</p>
                     </div>
-                    <!-- /.cards -->
+                    <!-- /.card -->
+                    <div class="card">
+                        <img src="./img/practice.png" alt="Практика" class="card__img">
+                        <h3 class="card__title">Практическая часть</h3>
+                        <p class="card__text">Выполняйте домашние задания и проверяйте полученные знания с помощью различных интерактивных тестов</p>
+                    </div>
+                    <!-- /.card -->
+                    <div class="card">
+                        <img src="./img/forum.png" alt="Форум" class="card__img">
+                        <h3 class="card__title">Форум</h3>
+                        <p class="card__text">Обговаривайте вопросы, которые Вас интересуют, напрямую с преподавателями и с другими студентами на закрытом форуме</p>
+                    </div>
+                    <!-- /.card -->
+                    <div class="card">
+                        <img src="./img/veb.png" alt="вебинары" class="card__img">
+                        <h3 class="card__title">On-line вебинары</h3>
+                        <p class="card__text">Учувствуйте в мастер-классах наших преподавателей в режиме реально времени, и тут же обсуждайте с ними интересующие Вас вопросы</p>
+                    </div>
+                    <!-- /.card -->
                 </div>
                 <!-- /.row -->
             </div>
