feat: add section view

--- a/index.html
+++ b/index.html
@@ -283,6 +283,43 @@
             <!-- /.container -->
         </section>
         <!-- /.section format -->
+        <section class="section progress">
+            <div class="container">
+                <div class="section-title--left">
+                    <h2 class="section-title__heading"><strong>Как выглядит</strong> Ваш процесс обучения алготрейдингу?</h2>
+                </div>
+                <!-- /.section-title -->
+                <div class="row">
+                    <div class="card">
+                        <h3 class="card__title">20</h3>
+                        <p class="card__subtitle">Уроков</p>
+                        <p class="card__text">Продолжительность курса</p>
+                    </div>
+                    <!-- /.card -->
+                    <div class="card">
+                        <h3 class="card__title">2 133</h3>
+                        <p class="card__subtitle">Минут</p>
+                        <p class="card__text">Продолжительность курса алготрейдинга</p>
+                    </div>
+                    <!-- /.card -->
+                    <div class="card">
+                        <h3 class="card__title">1</h3>
+                        <p class="card__subtitle">Неделя</p>
+                        <p class="card__text">Домашнего <br> задания к 9 уроку</p>
+                    </div>
+                    <!-- /.card -->
+                    <div class="card">
+                        <h3 class="card__title">1</h3>
+                        <p class="card__subtitle">Месяц</p>
+                        <p class="card__text">Домашнего задания <br> к 10 уроку — экзамену</p>
+                    </div>
+                    <!-- /.card -->
+                </div>
+                <!-- /.row -->
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.section progress -->
     </main>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
