feat: section lessons done (Swiper is not working, I duno)

--- a/index.html
+++ b/index.html
@@ -354,10 +354,31 @@
                             <button class="lessons-number__button">10</button>
                         </div>
                         <!-- /.lessons-numbers -->
+                        <div class="lessons-homework">
+                            <h3 class="lessons-homework__title">Домашнее задание</h3>
+                            <ol class="lessons-questions" type="A">
+                                <li class="lessons-homework__text">Вы сможете дать четкое описание алгоритмической торговле, а также понимать и использовать все плюсы и минусы торговых роботов</li>
+                            </ol>
+                        </div>
+                        <!-- /.lessons-homework -->
+                        <div class="lessons-bonus">
+                            <h3 class="lessons-bonus__title">Бонус</h3>
+                            <div class="lessons-bonus__desc">
+                                <img src="./img/gift.png" alt="Подарок" class="lessons-bonus__img">
+                                <p class="lessons-bonus__text">В качестве бонуса мы предоставляем вам 10-ку лучших БЕСПЛАТНЫХ форекс роботов</p>
+                            </div>
+                            <!-- /.lessons-bonus__desc -->
+                        </div>
+                        <!-- /.lessons-bonus -->
                     </div>
                     <!-- /.col-50 -->
                 </div>
                 <!-- /.row -->
+                <div class="lessons-buttons">
+                    <button class="button button--white lessons-buttons__button">Узнать подробнее</button>
+                    <button class="button button--primary lessons-buttons__button">Начать обучение</button>
+                </div>
+                <!-- /.lessons-buttons -->
             </div>
             <!-- /.container -->
         </section>
