feat: add section with advantages

--- a/index.html
+++ b/index.html
@@ -701,10 +701,50 @@
                 <!-- /.section-title -->
                 <h3 class="advantage-list__heading"></h3>
                 <div class="advantage-list">
-                    <div class="advantage-list__item">
-                        img.benefits
+                    <p class="section-title__subtitle">Интенсив</p>
+                    <div class="advantage-list__container">
+                        <div class="advantage-list__item">
+                            <img src="./img/star.svg" alt="Звезда" class="advantage-list__img">
+                            <h3 class="advantage-list__title">Профессионалы</h3>
+                            <p class="advantage-list__text">Преподавать курс для Вас будут только опытные трейдеры-практики</p>
+                        </div>
+                        <!-- /.advantage-list__item -->
+                        <div class="advantage-list__item">
+                            <img src="./img/steps.svg" alt="Звезда" class="advantage-list__img">
+                            <h3 class="advantage-list__title">Последовательность</h3>
+                            <p class="advantage-list__text">Все действия шаг за шагом и до результата вместе с профессионалами своего дела</p>
+                        </div>
+                        <!-- /.advantage-list__item -->
+                        <div class="advantage-list__item">
+                            <img src="./img/thunder.svg" alt="Звезда" class="advantage-list__img">
+                            <h3 class="advantage-list__title">100% практики</h3>
+                            <p class="advantage-list__text">Так много практики у Вас ещё не было. И всё это под руководством профессионалов</p>
+                        </div>
+                        <!-- /.advantage-list__item -->
                     </div>
-                    <!-- /.advantage-list__item -->                
+                    <!-- /.advamtage-list__container -->     
+                    <p class="section-title__subtitle">Результат</p>  
+                    <div class="advantage-list__container">
+                        <div class="advantage-list__item">
+                            <img src="./img/adrobot.svg" alt="Звезда" class="advantage-list__img">
+                            <h3 class="advantage-list__title">Авторские роботы.</h3>
+                            <p class="advantage-list__text">Получите авторских торговых роботов алготрейдинга, успешно торгующих с 2013 года</p>
+                        </div>
+                        <!-- /.advantage-list__item -->
+                        <div class="advantage-list__item">
+                            <img src="./img/bank.svg" alt="Звезда" class="advantage-list__img">
+                            <h3 class="advantage-list__title">Банк данных</h3>
+                            <p class="advantage-list__text">Получите постоянный доступ к закрытой информации, которой Вы точно не найдёте ни в книгах, ни на других курсах обучения</p>
+                        </div>
+                        <!-- /.advantage-list__item -->
+                        <div class="advantage-list__item">
+                            <img src="./img/diamond.svg" alt="Звезда" class="advantage-list__img">
+                            <h3 class="advantage-list__title">Личный робот и сертификат</h3>
+                            <p class="advantage-list__text">Успешно сдайте все задания курса и получите сертификат о его окончании! И главное — своего прибыльного торгового робота!</p>
+                        </div>
+                        <!-- /.advantage-list__item -->
+                    </div>
+                    <!-- /.advamtage-list__container -->                             
                 </div>
                 <!-- /.advantage-list -->
             </div>
