feat: add section-prices

--- a/index.html
+++ b/index.html
@@ -751,6 +751,66 @@
             <!-- /.container -->
         </section>
         <!-- /.section advantage -->
+        <section class="section prices">
+            <div class="container">
+                <div class="section-title">
+                    <h2 class="section-title__heading"><strong>Сколько</strong>  стоит обучение?</h2>
+                    <p class="section-title__subtitle">Станьте частью алготрейдинга прямо сейчас <br> и всего за месяц прямо на сессиях создайте своего эффективного торгового робота с нуля!</p>
+                </div>
+                <!-- /.section-title -->
+                <div class="row">
+                    <div class="col-30">
+                        <div class="prices-list__item">
+                            <h3 class="prices-list__title">Gold</h3>
+                            <span class="prices-list__price">$297</span>
+                            <ul class="prices-text">
+                                <li class="prices-text__item">Начитка лекций</li>
+                                <li class="prices-text__item">Практика</li>
+                                <li class="prices-text__item">Ответы на вопросы</li>
+                                <li class="prices-text__item">Тех. поддержка</li>
+                            </ul>
+                            <!-- /.prices-list__text -->
+                            <button class="prices-list__button">Купить</button>
+                        </div>
+                        <!-- /.prices-list__item -->
+                    </div>
+                    <!-- /.col-30 -->
+                    <div class="col-30">
+                        <div class="prices-list__item">
+                            <h3 class="prices-list__title">Premium</h3>
+                            <span class="prices-list__price">$497</span>
+                            <ul class="prices-text">
+                                <li class="prices-text__item">Обучение с куратором</li>
+                                <li class="prices-text__item">Постоянная возможность связаться с преподователем</li>
+                                <li class="prices-text__item">Практика</li>
+                            </ul>
+                            <!-- /.prices-list__text -->
+                            <button class="prices-list__button">Купить</button>
+                        </div>
+                        <!-- /.prices-list__item -->
+                    </div>
+                    <!-- /.col-30 -->
+                    <div class="col-30">
+                        <div class="prices-list__item">
+                            <h3 class="prices-list__title">VIP</h3>
+                            <span class="prices-list__price">$997</span>
+                            <ul class="prices-text">
+                                <li class="prices-text__item">Полностью индивидуальное обучение!</li>
+                                <li class="prices-text__item">Индивидуальная <br> программа </li>
+                                <li class="prices-text__item">Максимум практики</li>
+                            </ul>
+                            <!-- /.prices-list__text -->
+                            <button class="prices-list__button">Купить</button>
+                        </div>
+                        <!-- /.prices-list__item -->
+                    </div>
+                    <!-- /.col-30 -->
+                </div>
+                <!-- /.row -->
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.section prices -->
     </main>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
