feat: add learning-form section (wip)

--- a/index.html
+++ b/index.html
@@ -811,6 +811,21 @@
             <!-- /.container -->
         </section>
         <!-- /.section prices -->
+        <section class="section learning-form">
+            <div class="section-title">
+                <h2 class="section-title__heading">Получите первые видеоуроки совершенно бесплатно уже сейчас!</h2>
+                <p class="section-title__subtitle">Станьте частью алготрейдинга прямо сейчас <br> и всего за месяц прямо на сессиях создайте своего эффективного торгового робота с нуля!</p>
+            </div>
+            <!-- /.section-title -->
+            <form action="#" class="form learning-form__form">
+                <input type="text" class="input learning-form__input" id="user-name" placeholder="Имя">
+                <input type="tel" class="input learning-form__input" id="user-phone" placeholder="Телефон">
+                <input type="email" class="input learning-form__input" id="user-mail" placeholder="Email">
+                <button class="button button--primary">Начать обучение</button> 
+            </form>
+            <!-- /.form learning-form__form -->
+        </section>
+        <!-- /.section learning-form -->
     </main>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
