feat: add php sendler

--- a/index.html
+++ b/index.html
@@ -819,7 +819,7 @@
                 <p class="section-title__subtitle">Просто внесите Ваши данные в форму прям сейчас, и мы сразу Вам вышлем подборку первых видеоуроков. Убедитесь сами!</p>
             </div>
             <!-- /.section-title -->
-            <form action="#" class="form learning-form__form">
+            <form action="send.php" method="post" class="form learning-form__form">
                 <div class="input-group learning-form-input-group">
                     <input type="text" name="userName" class="input learning-form__input" id="user-name" placeholder="Имя">
                 </div>
@@ -1019,7 +1019,7 @@
                     <p class="section-title__subtitle">Оставьте свои контактные данные и мы с Вами свяжемся в самое ближайшее время</p>
                 </div>
                 <!-- /.section-title -->
-                <form action="#" class="form questions-form__form">
+                <form action="send.php" method="post" class="form questions-form__form">
                     <div class="input group questions-form-group">
                         <input type="text" name="userName" class="input learning-form__input" id="question-user-name" placeholder="Имя">
                     </div>
