all done (without optimization)

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
                     <a href="tel:+74959999999" class="phone contacts__phone">8 (495) <strong>999-99-99</strong></a>
                 </div>
                 <!-- /.contacts menu__contacts -->
+                <div class="menu-btn">
+                    <div class="menu-btn__burger"></div>
+                    <!-- /.menu-btn__burger -->
+                </div>
+                <!-- /.menu-btn -->
             </div>
             <!-- /.menu -->
         </div>
@@ -154,7 +159,7 @@
         <!-- /.creation-learning -->
         <section class="section benefits">
             <div class="container">
-                <h2 class="section-title__heading wow animate__animated animate__fadeIn" data-wow-delay="0.1s""><strong>Какие выгоды </strong> я получу<br> от создания своего робота?</h2>
+                <h2 class="section-title__heading wow animate__animated animate__fadeIn" data-wow-delay="0.1s"><strong>Какие выгоды </strong> я получу<br> от создания своего робота?</h2>
                 <div class="benefits-swiper">
                     <!-- Slider main container -->
                     <div class="swiper swiper-benefits">
@@ -232,7 +237,7 @@
         <section id="format" class="section format">
             <div class="container">
                 <div class="section-title">
-                    <h2 class="section-title__heading wow animate__animated animate__fadeIn" data-wow-delay="0.1s"">Формат обучения</h2>
+                    <h2 class="section-title__heading wow animate__animated animate__fadeIn" data-wow-delay="0.1s">Формат обучения</h2>
                 </div>
                 <!-- /.section-title -->
                 <div class="row cards">
@@ -701,7 +706,6 @@
                     <h2 class="section-title__heading">Преимущества курса</h2>
                 </div>
                 <!-- /.section-title -->
-                <h3 class="advantage-list__heading"></h3>
                 <div class="advantage-list">
                     <p class="section-title__subtitle">Интенсив</p>
                     <div class="advantage-list__container">
@@ -839,7 +843,7 @@
         <!-- /.section learning-form -->
         <section class="section feedback">
             <div class="container">
-                <div class="section-title wow animate__animated animate__fadeIn" data-wow-delay="0.1s"">
+                <div class="section-title wow animate__animated animate__fadeIn" data-wow-delay="0.1s">
                     <h2 class="section-title__heading"><strong>Отзывы</strong> наших учеников</h2>
                 </div>
                 <!-- /.section-title -->
